# whi

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  whi.file  whifile
scripts/: fix_doc_backticks.py
src/: app.rs  atomic_file.rs  cli.rs  config.rs  config_manager.rs  executor.rs  file_utils.rs  fish_integration.fish  history.rs  lib.rs  main.rs  output.rs  path.rs  path_diff.rs  path_file.rs  path_guard.rs  path_resolver.rs  posix_integration.sh  protected_config.rs  session_tracker.rs  shell_detect.rs  shell_integration.rs  system.rs  venv_manager.rs
