[package]
name = "whi"
version = "0.2.0"
edition = "2021"
authors = ["Alexander Knott <alexander.knott@posteo.de>"]
description = "Magically simple PATH management - improved which with PATH manipulation"
repository = "https://github.com/alexykn/whi"
readme = "README.md"
keywords = ["cli", "path", "which", "executable", "unix"]
categories = ["command-line-utilities"]
rust-version = "1.90"
license = "MIT"

[dependencies]
libc = "0.2"
